--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,12 @@
 button {
     margin-right: 3rem;
 }
+div {
+    margin-right: 3rem;
+}
+.navbar {
+    justify-content: space-between;
+}
+span {
+    padding-right: 1rem;
+}
